--- a/cmd/cam-api-gateway/Dockerfile
+++ b/cmd/cam-api-gateway/Dockerfile
@@ -1,11 +1,6 @@
-FROM golang:1.19 as build
+FROM golang:1.19
 
 WORKDIR /usr/src/app
 
-COPY . . 
-
-RUN CGO_ENABLED=0 GOOS=linux go build -ldflags="-s -w" -o /server cmd/cam-api-gateway/cam-api-gateway.go
-
-FROM scratch as run
-COPY --from=build /server .
-CMD ["./server"]
+COPY cam-api-gateway cam-api-gateway
+CMD ["./cam-api-gateway"]
