--- a/cmd/cam-api-gateway/Dockerfile
+++ b/cmd/cam-api-gateway/Dockerfile
@@ -1,6 +1,17 @@
-FROM golang:1.19
+FROM node:20 AS frontend
+WORKDIR /app
+COPY ./dashboard ./dashboard
+RUN bash -c "pushd dashboard && npm install && npm run build && popd"
 
-WORKDIR /usr/src/app
+FROM golang:1.19 AS builder
+WORKDIR /app
+COPY go.mod go.sum ./
+RUN go mod download
+COPY . .
+COPY --from=frontend /app/dashboard/dist ./dashboard/dist
+RUN go build -o server cmd/cam-api-gateway/cam-api-gateway.go
 
-COPY cam-api-gateway cam-api-gateway
-CMD ["./cam-api-gateway"]
+FROM alpine:latest
+WORKDIR /app
+COPY --from=builder /app/server .
+ENTRYPOINT ["./server"]
