--- a/cmd/cam-collection-workload/Dockerfile
+++ b/cmd/cam-collection-workload/Dockerfile
@@ -1,5 +1,17 @@
-FROM golang:1.19
-WORKDIR /usr/src/app
+FROM node:20 AS frontend
+WORKDIR /app
+COPY ./dashboard ./dashboard
+RUN bash -c "pushd dashboard && npm install && npm run build && popd"
 
-COPY cam-collection-workload cam-collection-workload
-CMD ["./cam-collection-workload"]
+FROM golang:1.19 AS builder
+WORKDIR /app
+COPY go.mod go.sum ./
+RUN go mod download
+COPY . .
+COPY --from=frontend /app/dashboard/dist ./dashboard/dist
+RUN go build -o server cmd/cam-collection-workload/cam-collection-workload.go
+
+FROM alpine:latest
+WORKDIR /app
+COPY --from=builder /app/server .
+ENTRYPOINT ["./server"]
