--- a/cmd/cam-eval-manager/Dockerfile
+++ b/cmd/cam-eval-manager/Dockerfile
@@ -1,6 +1,17 @@
-FROM golang:1.19
-WORKDIR /usr/src/app
-COPY policies/operators.rego policies/operators.rego
+FROM node:20 AS frontend
+WORKDIR /app
+COPY ./dashboard ./dashboard
+RUN bash -c "pushd dashboard && npm install && npm run build && popd"
 
-COPY cam-eval-manager cam-eval-manager
-CMD ["./cam-eval-manager"]
+FROM golang:1.19 AS builder
+WORKDIR /app
+COPY go.mod go.sum ./
+RUN go mod download
+COPY . .
+COPY --from=frontend /app/dashboard/dist ./dashboard/dist
+RUN go build -o server cmd/cam-eval-manager/cam-eval-manager.go
+
+FROM alpine:latest
+WORKDIR /app
+COPY --from=builder /app/server .
+ENTRYPOINT ["./server"]
