--- a/cmd/cam-req-manager/Dockerfile
+++ b/cmd/cam-req-manager/Dockerfile
@@ -1,9 +1,21 @@
-FROM golang:1.19
-WORKDIR /usr/src/app
+FROM node:20 AS frontend
+WORKDIR /app
+COPY ./dashboard ./dashboard
+RUN bash -c "pushd dashboard && npm install && npm run build && popd"
 
-COPY policies policies
-COPY metrics.json metrics.json
-COPY gxfs.json gxfs.json
+FROM golang:1.19 AS builder
+WORKDIR /app
+COPY go.mod go.sum ./
+RUN go mod download
+COPY . .
+COPY --from=frontend /app/dashboard/dist ./dashboard/dist
+RUN go build -o server cmd/cam-req-manager cam-req-manager/cam-req-manager cam-req-manager.go
 
-COPY cam-req-manager cam-req-manager
-CMD ["./cam-req-manager"]
+FROM alpine:latest
+WORKDIR /app
+COPY --from=builder /app/server .
+
+COPY policies /app/server/policies
+COPY metrics.json /app/server/metrics.json
+COPY gxfs.json /app/server/gxfs.json
+ENTRYPOINT ["./server"]
