--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,6 @@ jobs:
     uses: eclipse-xfsc/dev-ops/.github/workflows/dockerbuild.yml@main
     secrets: inherit
     with: 
-      build_args: SERVICE=${{ matrix.service }}
+      #build_args: SERVICE=${{ matrix.service }}
       service: ${{ matrix.service }}
       dockerfile: "cmd/${SERVICE}/Dockerfile"
