--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,4 +21,4 @@ jobs:
     with: 
       #build_args: SERVICE=${{ matrix.service }}
       service: ${{ matrix.service }}
-      dockerfile: "cmd/${SERVICE}/Dockerfile"
+      dockerfile: "cmd/${{ matrix.service }}/Dockerfile"
